# tonic-tls-poc

./: Cargo.toml  README.md  csr.cnf  gen-certs.sh  openssl.cnf
proto/: echo.proto
src/: client.rs  server.rs
