[package]
name = "tonic-tls-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
hyper = "1.2.0"
rustls = "0.23.4"
tonic = "0.11.0"
