[package]
name = "tonic-tls-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
tonic = { version = "0.11", features = [ "tls" ] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
x509-parser = "0.16.0"
clap = { version = "4.5.4", features = ["derive"] }


[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
