[package]
name = "tonic-tls-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
tokio-rustls = { version = "0.23" }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["util", "add-extension"] }
rustls-pemfile = { version = "1" }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }


[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }